@@ -6,6 +6,7 @@
 	* Updating refractive scane and everything mentioned above to handle calculation of the
 		refracted electric field. Previous method was incorrect approach.
 	* Updating EField calculation for the comparison refracted with unrefracted
+	* Adding refractedAngles script to plot refracted angles vs. height
 
 2014-09-30 Matt:
 	* Changed antenna position for default to 1km for comparison with ZHS.
